--- a/setup.cfg
+++ b/setup.cfg
@@ -2,17 +2,16 @@
 name = ndcube
 author = The SunPy Community
 author_email = sunpy@googlegroups.com
+license = BSD 2-Clause
+license_file = LICENSE.rst
+url = http://docs.sunpy.org/projects/ndcube/
 description = A package for multi-dimensional contiguious and non-contiguious coordinate aware arrays.
 long_description = file: README.rst
-license = BSD 2-Clause
-url = http://docs.sunpy.org/projects/ndcube/
-edit_on_github = True
-github_project = sunpy/ndcube
-python_requires = ">=3.6"
 
 [options]
+zip_safe = False
 packages = find:
-include_package_data = True
+python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
   sunpy>=1.0.3
@@ -20,48 +19,30 @@ install_requires =
   matplotlib>=2
 
 [options.extras_require]
-tests =
-  pytest<5.1
-  pytest-astropy
-  pytest-cov
-  pytest-mock
-  tox
+test =
+    pytest
+    pytest-astropy
 docs =
-  sphinx>=1.7
-  sphinx-astropy
-  sunpy-sphinx-theme
-  towncrier
-
-[options.package_data]
-ndcube.data = *
-
-[build_docs]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
+    sphinx
+    sphinx-automodapi
+    towncrier
+    sunpy-sphinx-theme
 
 [tool:pytest]
-minversion = 3.1
 testpaths = "ndcube" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers" "examples"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst -p no:warnings
-markers =
-    online: marks this test function as needing online connectivity.
-    figure: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
-# Disable internet access for tests not marked remote_data
+text_file_format = rst
 remote_data_strict = True
-
-[ah_bootstrap]
-auto_use = True
+addopts = --doctest-rst -p no:warnings
 
 [flake8]
-exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
+exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
 max-line-length = 110
 
 [pycodestyle]
-exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
+exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
 max_line_length = 110
 
 [isort]
@@ -79,22 +60,20 @@ length_sort_stdlib = True
 
 [coverage:run]
 omit =
-  ndcube/conftest.py
-  ndcube/cython_version*
-  ndcube/*setup*
-  ndcube/extern/*
-  ndcube/*/tests/*
-  ndcube/version*
-  ndcube/__init__*
   ndcube/_sunpy_init*
-  */ndcube/conftest.py
-  */ndcube/cython_version*
-  */ndcube/*setup*
-  */ndcube/extern/*
-  */ndcube/*/tests/*
-  */ndcube/version*
-  */ndcube/__init__*
+  ndcube/conftest.py
+  ndcube/*setup_package*
+  ndcube/tests/*
+  ndcube/*/tests/*
+  ndcube/extern/*
+  ndcube/version*
   */ndcube/_sunpy_init*
+  */ndcube/conftest.py
+  */ndcube/*setup_package*
+  */ndcube/tests/*
+  */ndcube/*/tests/*
+  */ndcube/extern/*
+  */ndcube/version*
 
 [coverage:report]
 exclude_lines =
@@ -109,3 +88,5 @@ exclude_lines =
   def main\(.*\):
   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}
+  # Don't complain about IPython completion helper
+  def _ipython_key_completions_
