--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,10 @@
+no-backports: &no-backports
+  name: Skip any branches called backport*
+  command: |
+    if [[ "${CIRCLE_BRANCH}" = *"backport"* ]]; then
+      circleci step halt
+    fi
+
 skip-check: &skip-check
   name: Check for [ci skip]
   command: bash .circleci/early_exit.sh
@@ -11,113 +18,58 @@ merge-check: &merge-check
       git checkout -qf pr/$CIRCLE_PR_NUMBER/merge
     fi
 
-permission-run: &permission-run
-  name: Fix permssions for installing
-  command: |
-    sudo chown -R circleci:circleci /usr/local/bin
-    sudo chown -R circleci:circleci /usr/local/lib/python3.7/site-packages
-    sudo chown -R circleci:circleci /usr/local/share/
-
 apt-run: &apt-install
   name: Install apt packages
   command: |
-    sudo apt update
-    sudo apt install -y graphviz build-essential
-
-sudo-apt-run: &sudo-apt-install
-  name: Install apt packages
-  command: |
-    sudo apt update
-    sudo apt install -y graphviz build-essential
-
-tox-install: &tox-install
-  name: Install Tox
-  command: |
-    sudo pip install tox
-
-tox-conda-install: &tox-conda-install
-  name: Install Tox-Conda
-  command: |
-    pip install tox-conda
+    apt update
+    apt install -y graphviz build-essential
 
 version: 2
 jobs:
-  egg-info-36:
-    docker:
-      - image: circleci/python:3.6
-    steps:
-      - checkout
-      - run: *skip-check
-      - run: *merge-check
-      - run: python setup.py egg_info
-
-  egg-info-37:
-    docker:
-      - image: circleci/python:3.7
-    steps:
-      - checkout
-      - run: *skip-check
-      - run: *merge-check
-      - run: python setup.py egg_info
-
   twine-check:
     docker:
-      - image: circleci/python:3.7
+      - image: continuumio/miniconda3
     steps:
       - checkout
+      - run: *no-backports
       - run: *skip-check
       - run: *merge-check
-      - run: *permission-run
-      - run: python setup.py sdist
+      - run: pip install -U pep517
+      - run: python -m pep517.build --source .
       - run: python -m pip install -U --user --force-reinstall twine
       - run: python -m twine check dist/*
 
-  pip-install:
-    docker:
-      - image: circleci/python:3.7
-    steps:
-      - checkout
-      - run: *skip-check
-      - run: *merge-check
-      - run: *permission-run
-      - run: *sudo-apt-install
-      - run: pip install -U pip
-      - run: pip install --progress-bar off .[all,dev]
-      - run: pip install -e .[all,dev]
-      - run: python setup.py develop
-
   html-docs:
     docker:
-      - image: circleci/python:3.7
+      - image: continuumio/miniconda3
     steps:
       - checkout
+      - run: *no-backports
       - run: *skip-check
       - run: *merge-check
-      - run: *permission-run
-      - run: *sudo-apt-install
+      - run: *apt-install
       - run: pip install -U tox
       - run: tox -e build_docs
+      - run:
+          name: Prepare for upload
+          command: |
+            # If it's not a PR, don't upload
+            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
+              rm -r docs/_build/html/*
+            else
+              # If it is a PR, delete sources, because it's a lot of files
+              # which we don't really need to upload
+              rm -r docs/_build/html/_sources
+            fi
       - store_artifacts:
           path: docs/_build/html
-      - run:
-          name: "Built documentation is available at:"
-          command: DOCS_URL="${CIRCLE_BUILD_URL}/artifacts/${CIRCLE_NODE_INDEX}/${CIRCLE_WORKING_DIRECTORY/#\~/$HOME}/docs/_build/html/index.html"; echo $DOCS_URL
 
 workflows:
   version: 2
 
-  egg-info:
-    jobs:
-      - egg-info-36
-      - egg-info-37
-
   twine-check:
     jobs:
       - twine-check
-
-  pip-install:
-    jobs:
-      - pip-install
 
   test-documentation:
     jobs:
