--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-### Python: https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -10,7 +8,6 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-pip-wheel-metadata/
 build/
 develop-eggs/
 dist/
@@ -23,6 +20,8 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -41,15 +40,17 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.nox/
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
 .pytest_cache/
-junit/
+cover/
 
 # Translations
 *.mo
@@ -59,6 +60,7 @@ junit/
 *.log
 local_settings.py
 db.sqlite3
+db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -71,16 +73,34 @@ instance/
 docs/_build/
 
 # PyBuilder
+.pybuilder/
 target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# pyenv
-.python-version
+# IPython
+profile_default/
+ipython_config.py
 
-# celery beat schedule file
+# pyenv
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+# .python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
 celerybeat-schedule
+celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
@@ -106,117 +126,27 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.dmypy.json
+dmypy.json
 
-### https://raw.github.com/github/gitignore/master/Global/OSX.gitignore
+# Pyre type checker
+.pyre/
 
-.DS_Store
-.AppleDouble
-.LSOverride
+# pytype static type analyzer
+.pytype/
 
-# Icon must ends with two \r.
-Icon
+# Cython debug symbols
+cython_debug/
 
+# static files generated from Django application using `collectstatic`
+media
+static
 
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-### Linux: https://raw.githubusercontent.com/github/gitignore/master/Global/Linux.gitignore
-
-*~
-
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-
-### MacOS: https://raw.githubusercontent.com/github/gitignore/master/Global/macOS.gitignore
-
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-### Windows: https://raw.githubusercontent.com/github/gitignore/master/Global/Windows.gitignore
-
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-### VScode: https://raw.githubusercontent.com/github/gitignore/master/Global/VisualStudioCode.gitignore
-.vscode/*
-
-### Extra Python Items and ndcube specific
-.hypothesis
-.pytest_cache
-sunpydata.sqlite
-sunpydata.sqlite-journal
-ndcube/_compiler.c
-ndcube/cython_version.py
+# Specifc Template
 docs/_build
 docs/generated
-docs/api/
+docs/api
 docs/whatsnew/latest_changelog.txt
-examples/**/*.asdf
-# This is incase you run the figure tests
-figure_test_images*
-tags
-
-### Pycharm(?)
-.idea
-
-# Release script
-.github_cache
+ndcube/version.py
+htmlcov/
+.github_cache/
