--- a/tox.ini
+++ b/tox.ini
@@ -1,32 +1,63 @@
 [tox]
-envlist = py{36,37}-{offline,online,astropydev,numpydev,sunpydev},build_docs,pycodestyle
-isolated_build = True
+envlist =
+    py{37,38}{,-devdeps,-online}
+    build_docs
+    codestyle
+isolated_build = true
+requires =
+    setuptools >= 30.3.0
+    pip >= 19.3.1
+    tox-pypi-filter >= 0.10
 
 [testenv]
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-    PYTEST_COMMAND = pytest --cov=ndcube --cov-config={toxinidir}/setup.cfg --verbose -m "not figure"
-extras = all,tests
+    PYTEST_COMMAND = pytest --pyargs ndcube {toxinidir}/docs --cov=ndcube --cov-config={toxinidir}/setup.cfg
+
+# The following option combined with the use of the tox-pypi-filter above allows
+# project-wide pinning of dependencies, e.g. if new versions of pytest do not
+# work correctly with pytest-astropy plugins. Most of the time the pinnings file
+# should be empty.
+pypi_filter_requirements = https://raw.githubusercontent.com/sunpy/sunpy/master/.test_package_pins.txt
+
+# Pass through the following environemnt variables which may be needed for the CI
+passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS
+
+# Run the tests in a temporary directory to make sure that we don't import
+# the package from the source tree
+changedir = .tmp/{envname}
+
+# tox environments are constructued with so-called 'factors' (or terms)
+# separated by hyphens, e.g. test-devdeps-cov. Lines below starting with factor:
+# will only take effect if that factor is included in the environment name. To
+# see a list of example environments that can be run, along with a description,
+# run:
+#
+#     tox -l -v
+#
+extras =
+    test
+    pytest-xdist
 deps =
-    sunpydev: git+https://github.com/sunpy/sunpy
-    astropydev,numpydev: cython
-    numpydev: git+https://github.com/numpy/numpy
-    astropydev: git+https://github.com/astropy/astropy
-    pytest-cov
+    devdeps: git+https://github.com/sunpy/sunpy
+    devdeps: git+https://github.com/astropy/astropy
 commands =
-    offline,astropydev,numpydev,sunpydev: {env:PYTEST_COMMAND} {posargs}
+    !online: {env:PYTEST_COMMAND} {posargs}
     online: {env:PYTEST_COMMAND} --remote-data=any {posargs}
 
-[testenv:pycodestyle]
-deps =
-    pycodestyle
-commands = pycodestyle ndcube --count
-
-
 [testenv:build_docs]
-changedir = {toxinidir}
-extras = dev
-setenv =
-    HOME = {envtmpdir}
-commands = sphinx-build docs docs/_build/html -W -b html
+changedir = docs
+description = invoke sphinx-build to build the HTML docs
+extras = docs
+commands =
+    sphinx-build -W -b html . _build/html {posargs}
+
+[testenv:codestyle]
+skip_install = true
+description = Run all style and file checks with pre-commit
+deps =
+    pre-commit
+commands =
+    pre-commit install-hooks
+    pre-commit run --all-files
