Pin pytest to less than version 5.4 as a temp fix
Add changelog entry for PR #262

Remove unused import sunpy.map statement

Change known_astropy to known_third_party in isort of setup.cfg

Empty out [isort] known_third_party in setup.cfg

Use [isort].skip_glob to skip over changelog entries

Use [] for known_third_party value since pyproject.toml is present

Add seed-isort-config to pre-commit config yaml file

Put seed-isort-config before isort in .pre-commit-config.yaml file

Add back missing [isort].sections in setup.cfg

Commit isort changes locally and comment out seed-isort-config

Add blank line to ensure changelog file ends with a newline

Apply suggestions from code review

Co-Authored-By: DanRyanIrish <ryand5@tcd.ie>

Make changes according to reviewer's suggestions

Revert isort version change in .pre-commit-config.yaml

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ install_requires =
 
 [options.extras_require]
 test =
-    pytest
+    pytest < 5.4
     pytest-astropy
 docs =
     sphinx
@@ -48,10 +48,10 @@ max_line_length = 110
 [isort]
 line_length = 110
 not_skip = __init__.py
-sections = FUTURE, STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
+sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
 default_section = THIRDPARTY
 known_first_party = ndcube
-known_astropy = astropy, asdf, sunpy
+known_third_party = astropy,matplotlib,numpy,pytest,setuptools
 multi_line_output = 0
 balanced_wrapping = True
 include_trailing_comma = False
