Push development versions of ndcube to azure

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,12 +52,17 @@ jobs:
 
 
 # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
-- ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
+- ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
   - template: publish.yml@OpenAstronomy
     parameters:
       # Only Upload to PyPI on tags
       ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
         pypi_connection_name : 'PyPI'
+      # Upload to artifacts on master only
+      ${{ if eq(variables['Build.SourceBranchName'], 'master') }}:
+        artifact_project : 'ndcube'
+        artifact_feed : 'ndcube'
+        remove_local_scheme: true
 
       test_extras: 'test'
       test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs ndcube'
