--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,9 @@ packages = find:
 python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
-  sunpy>=1.0.3
-  astropy>=3.1
-  matplotlib>=2
+  sunpy>=2.0rc1
+  astropy<4.1
+  matplotlib>=3
 
 [options.extras_require]
 test =
