Pin maximum sunpy version

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,13 +15,13 @@ packages = find:
 include_package_data = True
 setup_requires = setuptools_scm
 install_requires =
-  sunpy>=1.0.3
+  sunpy>=1.0.3<2.1
   astropy>=3.1
   matplotlib>=2
 
 [options.extras_require]
 tests =
-  pytest<5.1
+  pytest
   pytest-astropy
   pytest-cov
   pytest-mock
