--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ install_requires =
   sunpy>=2.0rc1
   astropy
   matplotlib>=3
+  gwcs
 
 [options.extras_require]
 test =
@@ -100,3 +101,5 @@ exclude_lines =
   pragma: py{ignore_python_version}
   # Don't complain about IPython completion helper
   def _ipython_key_completions_
+
+
