even more codestyle

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,7 @@ jobs:
   parameters:
     submodules: false
     coverage: codecov
+    default_python: 3.8
     envs:
       - linux: pycodestyle
 
