First crack at hashlib

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{37,38}{,-devdeps,-online}
+    py{37,38}{,-devdeps,-online,-figure}
     build_docs
     codestyle
 isolated_build = true
@@ -45,9 +45,16 @@ deps =
     pytest-xdist
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: git+https://github.com/astropy/astropy
+
+    # Figure tests need a tightly controlled environment
+    figure: matplotlib==3.3.2
+    figure-!devdeps: astropy==4.1.0
+
 commands =
-    !online: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --remote-data=any {posargs}
+    !online-!figure: {env:PYTEST_COMMAND} {posargs}
+    online-!figure: {env:PYTEST_COMMAND} --remote-data=any {posargs}
+    figure: python -c "import ndcube.tests.helpers as h; print(h.get_hash_library_name())"
+    figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-master/figures/{envname}/ {posargs}
 
 [testenv:build_docs]
 changedir = docs
