--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ long_description = file: README.rst
 [options]
 zip_safe = False
 packages = find:
+include_package_data = True
 python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
@@ -20,8 +21,9 @@ install_requires =
 
 [options.extras_require]
 test =
-    pytest < 5.4
+    pytest
     pytest-astropy
+    pytest-mpl >= 0.12
 docs =
     sphinx
     sphinx-automodapi
@@ -34,8 +36,15 @@ norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 text_file_format = rst
-remote_data_strict = True
+mpl-results-path = figure_test_images
+mpl-use-full-test-name = True
 addopts = --doctest-rst -p no:warnings
+markers =
+    remote_data: marks this test function as needing remote data.
+    online: marks this test function as needing online connectivity.
+    array_compare
+    mpl_image_compare
+remote_data_strict = True
 
 [flake8]
 exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
