--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ balanced_wrapping = True
 include_trailing_comma = False
 length_sort = False
 length_sort_stdlib = True
+skip_glob = *.rst --filter-files
 
 [coverage:run]
 omit =
