Rename hashlibs, add dev

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
   sunpy>=2.0rc1
-  astropy<4.1
+  astropy
   matplotlib>=3
 
 [options.extras_require]
