Pin sunpy in figure tests

--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,7 @@ deps =
     # Figure tests need a tightly controlled environment
     figure: matplotlib==3.3.2
     figure-!devdeps: astropy==4.1.0
+    figure-!devdeps: sunpy==2.0.3
 
 commands =
     !online-!figure: {env:PYTEST_COMMAND} {posargs}
