--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ description =
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-    PYTEST_COMMAND = pytest --pyargs ndcube {toxinidir}/docs --cov=ndcube --cov-config={toxinidir}/setup.cfg
+    PYTEST_COMMAND = pytest --pyargs ndcube {toxinidir}/docs --cov=ndcube --cov-config={toxinidir}/setup.cfg  --cov-report=xml
 # Pass through the following environemnt variables which may be needed for the CI
 passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS
 extras =
