Refactor the core and plotting tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist =
-    py{37,38}{,-devdeps,-online,-figure}
+    py{37,38}{,-devdeps,-online}
+    py37-figure-devdeps
+    py38-figure
     build_docs
     codestyle
 isolated_build = true
