Fix up all test builds

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,9 @@ python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
   sunpy>=2.0rc1
-  astropy
+  astropy>=4.1
   matplotlib>=3
-  gwcs
+  gwcs>=0.14.1a1.dev25
 
 [options.extras_require]
 test =
@@ -30,6 +30,8 @@ docs =
     sphinx-automodapi
     towncrier
     sunpy-sphinx-theme
+    pytest-doctestplus
+    sphinx-astropy
 
 [tool:pytest]
 testpaths = "ndcube" "docs"
@@ -39,13 +41,18 @@ doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 text_file_format = rst
 mpl-results-path = figure_test_images
 mpl-use-full-test-name = True
-addopts = --doctest-rst -p no:warnings
+addopts = --doctest-rst
 markers =
     remote_data: marks this test function as needing remote data.
     online: marks this test function as needing online connectivity.
     array_compare
     mpl_image_compare
 remote_data_strict = True
+filterwarnings =
+    ignore
+    always::DeprecationWarning
+    error::astropy.utils.exceptions.AstropyDeprecationWarning
+    error::sunpy.util.exceptions.SunpyDeprecationWarning
 
 [flake8]
 exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
