--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,7 @@ deps =
     pytest-xdist
     devdeps: git+https://github.com/astropy/astropy
     devdeps: git+https://github.com/sunpy/sunpy
-    devdeps: git+https://github.com/Cadair/gwcs@extra_coords
+    git+https://github.com/spacetelescope/gwcs@master
 
     # Figure tests need a tightly controlled environment
     figure: matplotlib==3.3.2
