--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,6 @@ max_line_length = 110
 
 [isort]
 line_length = 110
-not_skip = __init__.py
 sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
 default_section = THIRDPARTY
 known_first_party = ndcube
@@ -73,7 +72,7 @@ multi_line_output = 0
 balanced_wrapping = True
 include_trailing_comma = False
 length_sort = False
-length_sort_stdlib = True
+length_sort_sections = stdlib
 skip_glob = *.rst --filter-files
 
 [coverage:run]
