Update to use new gwcs release

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,13 +18,13 @@ install_requires =
   sunpy>=2.0rc1
   astropy>=4.1
   matplotlib>=3
-  gwcs>=0.14.1a1.dev25
+  gwcs>=0.15
 
 [options.extras_require]
 test =
     pytest
     pytest-astropy
-    pytest-mpl >= 0.12
+    pytest-mpl>=0.12
 docs =
     sphinx
     sphinx-automodapi
