Include redefinition of ND objects in docs are collapsed code blocks.

--- a/tox.ini
+++ b/tox.ini
@@ -45,6 +45,7 @@ extras =
     test
 deps =
     pytest-xdist
+    docutils
     devdeps: git+https://github.com/astropy/astropy
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: git+https://github.com/spacetelescope/gwcs
