Attempt to make sunpy dependency optional

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,6 @@ include_package_data = True
 python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
-  sunpy>=2.0rc1
   astropy>=4.1
   matplotlib>=3
   gwcs>=0.15
@@ -33,6 +32,8 @@ docs =
     sunpy-sphinx-theme
     pytest-doctestplus
     sphinx-astropy
+plot =
+    sunpy>=2.0rc1
 
 [tool:pytest]
 testpaths = "ndcube" "docs"
