--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ requires =
 # project-wide pinning of dependencies, e.g. if new versions of pytest do not
 # work correctly with pytest-astropy plugins. Most of the time the pinnings file
 # should be empty.
-pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/master/.test_package_pins.txt
+pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
 # Run the tests in a temporary directory to make sure that we don't import
 # the package from the source tree
 changedir = .tmp/{envname}
@@ -60,7 +60,7 @@ commands =
     !online-!figure: {env:PYTEST_COMMAND} {posargs}
     online-!figure: {env:PYTEST_COMMAND} --remote-data=any {posargs}
     figure: python -c "import ndcube.tests.helpers as h; print(h.get_hash_library_name())"
-    figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-master/figures/{envname}/ {posargs}
+    figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ {posargs}
 
 [testenv:build_docs]
 changedir = docs
