--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ build-backend = 'setuptools.build_meta'
     filename = "CHANGELOG.rst"
     directory = "changelog/"
     issue_format = "`#{issue} <https://github.com/sunpy/ndcube/pull/{issue}>`__"
+    title_format = "{version} ({project_date})"
 
     [[tool.towncrier.type]]
         directory = "breaking"
