--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ docs =
     sphinx-automodapi
     sunpy-sphinx-theme
     pytest-doctestplus>=0.9.0  # First version with the sphinx ext
-    sphinx-changelog
+    sphinx-changelog>=1.1.0
 animate =
     sunpy>=2.0rc1
 
