--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
 
 notify:
   webhooks:
