--- a/.pep8speaks.yml
+++ b/.pep8speaks.yml
@@ -1,10 +1,23 @@
+scanner:
+  diff_only: False
+
 pycodestyle:
   max-line-length: 100
   exclude:
     - setup.py
-    - ez_setup.py
-    - ah_bootstrap.py
-    - astropy_helpers/
     - docs/conf.py
-  descending_issues_order: True
-  only_mention_files_with_errors: True
+    - ndcube/__init__.py
+  ignore:
+    - E226
+    - E501
+
+descending_issues_order: True
+
+message:
+  opened:
+    header: "Hello @{name}! Thanks for opening this PR. "
+    footer: "Do see the [Hitchhiker's guide to code style](https://goo.gl/hqbW4r)"
+  updated:
+    header: "Hello @{name}! Thanks for updating this PR. "
+    footer: ""
+  no_errors: "There are currently no PEP 8 issues detected in this Pull Request. Cheers!"
