--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,7 @@
 name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
 variables:
-  CI_NAME: Azure Pipelines
-  CI_BUILD_ID: $(Build.BuildId)
-  CI_BUILD_URL: "https://dev.azure.com/sunpy/ndcube/_build/results?buildId=$(Build.BuildId)"
-  CIBW_BUILD: cp36-* cp37-* cp38-*
-  CIBW_SKIP: "*-win32 *-manylinux1_i686"
+  CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+  CIBW_MANYLINUX_I686_IMAGE: manylinux2014
 
 resources:
   repositories:
@@ -34,51 +31,77 @@ schedules:
     branches:
       include:
       - main
-      - 1.3
-    always: false
+    always: true
 
-jobs:
-- template: run-tox-env.yml@OpenAstronomy
-  parameters:
-    submodules: false
-    coverage: codecov
-    envs:
-      - macos: py37
-        name: py37_test_macos
+pr:
+  autoCancel: true
 
-      - windows: py38
-        name: py38_test_windows
+stages:
+  - stage: FirstPhaseTests
+    displayName: Core Tests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        envs:
+          - linux: codestyle
+            name: style_check
+            pytest: false
+            libraries: {}
+          - linux: py39
 
-      - linux: py38
-        name: py38_test_linux
+  - stage: SecondPhaseTests
+    displayName: Stage 2 Tests
+    dependsOn: FirstPhaseTests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        libraries:
+          apt:
+            - graphviz
+        envs:
+          - macos: py37
+          - windows: py38
+          - linux: build_docs
+            posargs: " "
+            pytest: false
+          - linux: py38-conda
+            libraries: {}
 
-      - linux: py38-devdeps
-        name: py38_test_devdeps
+  - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
+    - stage: CronTests
+      displayName: Cron Tests
+      dependsOn: []  # Don't wait on other stages
+      jobs:
+      - template: run-tox-env.yml@OpenAstronomy
+        parameters:
+          default_python: '3.8'
+          submodules: false
+          coverage: codecov
+          toxdeps: tox-pypi-filter
+          envs:
+            - linux: py38-devdeps
 
-      - linux: codestyle
-        name: codestyle
-
-
-# On branches which aren't main, and not Pull Requests, build the wheels but only upload them on tags
-- ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
-  - template: publish.yml@OpenAstronomy
-    parameters:
-      # Only Upload to PyPI on tags
-      ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
-        pypi_connection_name : 'PyPI'
-      # Upload to artifacts on main only
-      ${{ if eq(variables['Build.SourceBranchName'], 'main') }}:
-        artifact_project : 'ndcube'
-        artifact_feed : 'ndcube'
-        remove_local_scheme: true
-
-      test_extras: 'test'
-      test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs ndcube'
-      submodules: false
-      targets:
-        - wheels_universal
-        - sdist
-      dependsOn:
-        - py37_test_macos
-        - py38_test_windows
-        - py38_test_linux
+  # On branches which aren't main, and not Pull Requests, build the wheels but only upload them on tags
+  - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'main'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+    - stage: Release
+      dependsOn: SecondPhaseTests
+      jobs:
+      - template: publish.yml@OpenAstronomy
+        parameters:
+          # Only Upload to PyPI on tags
+          ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
+            pypi_connection_name : 'PyPI'
+          test_extras: 'dev'
+          test_command: 'pytest -p no:warnings --doctest-rst -m "not mpl_image_compare" --pyargs ndcube'
+          submodules: false
+          targets:
+            - wheels_universal
+            - sdist
