code review comments

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,14 +5,14 @@ author = The SunPy Community
 author_email = sunpy@googlegroups.com
 license = BSD 2-Clause
 license_file = LICENSE.rst
-url = https://docs.sunpy.org/projects/ndcube/en/stable/
+url = https://docs.sunpy.org/projects/ndcube/
 description = A package for multi-dimensional contiguious and non-contiguious coordinate aware arrays.
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 edit_on_github = True
 github_project = sunpy/ndcube
 platform = any
-keywords = nddata, science, sun, wcs, gwcs, coordinates
+keywords = nddata, science, sun, wcs, gwcs, coordinates, sunpy, astropy, solar, spectroscopy
 classifiers =
   Development Status :: 5 - Production/Stable
   Intended Audience :: Science/Research
