--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,7 @@ deps =
 
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
-    devdeps: git+https://github.com/astropy/astropy
+    # Astropy is installed from the nightly wheels
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: git+https://github.com/spacetelescope/gwcs
 
@@ -72,6 +72,9 @@ commands =
     figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
     figure: python -c "import ndcube.tests.helpers as h; print(h.get_hash_library_name())"
     figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ {posargs}
+
+[testenv:devdeps]
+install_command = pip install --extra-index-url=https://pkgs.dev.azure.com/astropy-project/astropy/_packaging/nightly/pypi/simple/ --pre {packages}
 
 [testenv:build_docs]
 changedir = docs
