Fix devdeps with astropy nightly wheels

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ install_requires =
   matplotlib>=3
 
 [options.extras_require]
-test =
+tests =
     pytest
     pytest-astropy
     pytest-mpl>=0.12
