--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ deps =
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
     # Astropy is installed from the nightly wheels
+    devdeps: astropy>4.3dev0
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: git+https://github.com/spacetelescope/gwcs
 
@@ -73,8 +74,9 @@ commands =
     figure: python -c "import ndcube.tests.helpers as h; print(h.get_hash_library_name())"
     figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ {posargs}
 
-[testenv:devdeps]
-install_command = pip install --extra-index-url=https://pkgs.dev.azure.com/astropy-project/astropy/_packaging/nightly/pypi/simple/ --pre {packages}
+[testenv:py{37,38,39}-devdeps{,-online,-figure}]
+install_command = python -m pip install --extra-index-url=https://pkgs.dev.azure.com/astropy-project/astropy/_packaging/nightly/pypi/simple/ {opts} {packages}
+pip_pre = true
 
 [testenv:build_docs]
 changedir = docs
