--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,23 @@
 [tox]
 envlist =
-    py{37,38}{,-devdeps,-online}
-    py37-figure-devdeps
-    py38-figure
+    py{37,38,39}{,-devdeps,-online,-figure,-conda}
     build_docs
     codestyle
-isolated_build = true
 requires =
     setuptools >= 30.3.0
     pip >= 19.3.1
-    tox-pypi-filter >= 0.10
+    tox-pypi-filter >= 0.12
+isolated_build = true
 
 [testenv]
-# The following option combined with the use of the tox-pypi-filter above allows
-# project-wide pinning of dependencies, e.g. if new versions of pytest do not
-# work correctly with pytest-astropy plugins. Most of the time the pinnings file
-# should be empty.
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
-# Run the tests in a temporary directory to make sure that we don't import
-# the package from the source tree
+# We use bash in some of our environments so we have to whitelist it.
+whitelist_externals=
+    /bin/bash
+    /usr/bin/bash
+# Run the tests in a temporary directory to make sure that we don't import ndcube from the source tree
 changedir = .tmp/{envname}
-# tox environments are constructued with so-called 'factors' (or terms)
+# tox environments are constructed with so-called 'factors' (or terms)
 # separated by hyphens, e.g. test-devdeps-cov. Lines below starting with factor:
 # will only take effect if that factor is included in the environment name. To
 # see a list of example environments that can be run, along with a description,
@@ -31,49 +28,89 @@ changedir = .tmp/{envname}
 description =
     run tests
     devdeps: with the latest developer version of key dependencies
-    oldestdeps: with the oldest supported version of key dependencies
-    online: that require remote data
-    hypothesis: using hypothesis (both offline and online)
+    online: that require remote data (as well as the offline ones)
     figure: runs the figure test suite.
 setenv =
     MPLBACKEND = agg
     COLUMNS = 180
-    PYTEST_COMMAND = pytest --pyargs ndcube {toxinidir}/docs --cov=ndcube --cov-config={toxinidir}/setup.cfg  --cov-report=xml
-# Pass through the following environemnt variables which may be needed for the CI
-passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS
-extras =
-    test
-    animate
+    PYTEST_COMMAND = pytest -vvv -s -raR --pyargs ndcube --cov-report=xml --cov=sunpy --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
+passenv =
+    HTTP_PROXY
+    HTTPS_PROXY
+    NO_PROXY
+    CIRCLECI
 deps =
-    pytest-xdist
-    docutils
-    devdeps: git+https://github.com/astropy/astropy
+    # We need this for some packages.
+    setuptools
+
+    # The devdeps factor is intended to be used to install the latest developer version.
+    # of key dependencies.
+    # Astropy is installed from the nightly wheels
+    devdeps: astropy>4.3dev0
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: git+https://github.com/spacetelescope/gwcs
+
+    # These are specific online extras we use to run the online tests.
+    online: pytest-rerunfailures
+    online: pytest-timeout
 
     # Figure tests need a tightly controlled environment
     figure: matplotlib==3.3.2
     figure-!devdeps: astropy==4.1.0
-    figure-!devdeps: sunpy==2.0.3
+    figure-!devdeps: sunpy==3.0.0
 
+# The following indicates which extras_require from setup.cfg will be installed
+# We use test and all so we don't install docs when we don't need it (as
+# opposed to dev).
+extras =
+    all
+    tests
 commands =
-    !online-!figure: {env:PYTEST_COMMAND} {posargs}
-    online-!figure: {env:PYTEST_COMMAND} --remote-data=any {posargs}
+    !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
+    online: {env:PYTEST_COMMAND} --reruns 2 --reruns-delay 15 --timeout=180 --remote-data=any {posargs}
+    figure: /bin/bash -c "mkdir -p ./figure_test_images; python -c 'import matplotlib as mpl; print(mpl.ft2font.__file__, mpl.ft2font.__freetype_version__, mpl.ft2font.__freetype_build_type__)' > ./figure_test_images/figure_version_info.txt"
+    figure: /bin/bash -c "pip freeze >> ./figure_test_images/figure_version_info.txt"
+    figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
     figure: python -c "import ndcube.tests.helpers as h; print(h.get_hash_library_name())"
     figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ {posargs}
 
+[testenv:py{37,38,39}{,-figure,-online}-devdeps{,-online,-figure}]
+install_command = python -m pip install --extra-index-url=https://pkgs.dev.azure.com/astropy-project/astropy/_packaging/nightly/pypi/simple/ {opts} {packages}
+pip_pre = true
+
 [testenv:build_docs]
 changedir = docs
-description = invoke sphinx-build to build the HTML docs
-extras = docs
+description = Invoke sphinx-build to build the HTML docs
+# Be verbose about the extras rather than using dev for clarity
+extras =
+  all
+  docs
 commands =
-    sphinx-build -W -b html . _build/html {posargs}
+    sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
+    python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
 
 [testenv:codestyle]
+pypi_filter =
 skip_install = true
 description = Run all style and file checks with pre-commit
 deps =
     pre-commit
 commands =
     pre-commit install-hooks
-    pre-commit run --all-files
+    pre-commit run --color always --all-files --show-diff-on-failure
+
+# This env requires tox-conda.
+[testenv:conda]
+pypi_filter =
+extras =
+deps =
+conda_deps =
+    astropy
+    matplotlib
+    gwcs
+    sunpy
+conda_channels = conda-forge
+install_command = pip install --no-deps {opts} {packages}
+commands =
+    conda list
+    {env:PYTEST_COMMAND} {posargs}
