A better solution for devdeps

--- a/tox.ini
+++ b/tox.ini
@@ -73,10 +73,8 @@ commands =
     figure: /bin/bash -c "cat ./figure_test_images/figure_version_info.txt"
     figure: python -c "import ndcube.tests.helpers as h; print(h.get_hash_library_name())"
     figure: {env:PYTEST_COMMAND} -m "mpl_image_compare" --mpl --remote-data=any --mpl-generate-summary=html --mpl-baseline-path=https://raw.githubusercontent.com/sunpy/sunpy-figure-tests/ndcube-main/figures/{envname}/ {posargs}
-
-[testenv:py{37,38,39}{,-figure,-online}-devdeps{,-online,-figure}]
-install_command = python -m pip install --extra-index-url=https://pkgs.dev.azure.com/astropy-project/astropy/_packaging/nightly/pypi/simple/ {opts} {packages}
-pip_pre = true
+install_command =
+  devdeps: python -m pip install --pre --extra-index-url=https://pkgs.dev.azure.com/astropy-project/astropy/_packaging/nightly/pypi/simple/ {opts} {packages}
 
 [testenv:build_docs]
 changedir = docs
