Allow matplotlib to be an optional dependancy
By delaying the import of MatplotlibPlotter into the descriptor we can only
raise the import error when `.plotter` or `.plot()` are accessed.

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,6 @@ setup_requires =
 install_requires =
   astropy>=4.1
   gwcs>=0.15
-  matplotlib>=3
 
 [options.extras_require]
 tests =
@@ -49,7 +48,8 @@ docs =
     sphinx-automodapi
     sphinx-changelog>=1.1.0
     sunpy-sphinx-theme
-animate =
+plotting =
+    matplotlib>=3
     sunpy>=3.0.0
 
 [options.packages.find]
