Make reproject an optional dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,6 @@ setup_requires =
 install_requires =
   astropy>=4.1
   gwcs>=0.15
-  reproject>=0.7.1
 
 [options.extras_require]
 tests =
@@ -52,6 +51,8 @@ docs =
 plotting =
     matplotlib>=3
     sunpy>=3.0.0
+reproject =
+    reproject>=0.7.1
 
 [options.packages.find]
 exclude = ndcube._dev
