--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ tests =
     pytest
     pytest-astropy
     pytest-mpl>=0.12
+    sunpy
 docs =
     pytest-doctestplus>=0.9.0  # First version with the sphinx ext
     sphinx
@@ -50,7 +51,7 @@ docs =
     sunpy-sphinx-theme
 plotting =
     matplotlib>=3
-    sunpy>=3.0.0
+    mpl_animators
 reproject =
     reproject>=0.7.1
 
@@ -72,7 +73,6 @@ markers =
 remote_data_strict = True
 filterwarnings =
     error
-    error::sunpy.util.exceptions.SunpyDeprecationWarning
     # Do not fail on pytest config issues (i.e. missing plugins) but do show them
     always::pytest.PytestConfigWarning
     #
