Test released version of mpl_animators

--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,6 @@ passenv =
 deps =
     # We need this for some packages.
     setuptools
-    git+https://github.com/sunpy/mpl-animators
 
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
@@ -59,7 +58,7 @@ deps =
     # Figure tests need a tightly controlled environment
     figure: matplotlib==3.3.2
     figure-!devdeps: astropy==4.1.0
-    figure-!devdeps: mpl_animators==1.0
+    figure-!devdeps: mpl_animators==1.0.0rc1
 
 # The following indicates which extras_require from setup.cfg will be installed
 # We use test and all so we don't install docs when we don't need it (as
