--- a/tox.ini
+++ b/tox.ini
@@ -58,7 +58,7 @@ deps =
     # Figure tests need a tightly controlled environment
     figure: matplotlib==3.3.2
     figure-!devdeps: astropy==4.1.0
-    figure-!devdeps: mpl_animators==1.0.0rc1
+    figure-!devdeps: mpl_animators==1.0.0
 
 # The following indicates which extras_require from setup.cfg will be installed
 # We use test and all so we don't install docs when we don't need it (as
