--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,26 +40,23 @@ stages:
   - stage: FirstPhaseTests
     displayName: Core Tests
     jobs:
+    - template: check-skip.yml@OpenAstronomy
     - template: run-tox-env.yml@OpenAstronomy
       parameters:
-        default_python: '3.8'
         submodules: false
         coverage: codecov
         toxdeps: tox-pypi-filter
         envs:
-          - linux: codestyle
-            name: style_check
-            pytest: false
-            libraries: {}
           - linux: py39
 
   - stage: SecondPhaseTests
     displayName: Stage 2 Tests
     dependsOn: FirstPhaseTests
+    condition: and(succeeded(), ne(dependencies.FirstPhaseTests.outputs['check_skip.search.found'], 'true'))
     jobs:
     - template: run-tox-env.yml@OpenAstronomy
       parameters:
-        default_python: '3.8'
+        default_python: '3.9'
         submodules: false
         coverage: codecov
         toxdeps: tox-pypi-filter
@@ -77,7 +74,7 @@ stages:
           - linux: py38-devdeps
 
   # On branches which aren't main, and not Pull Requests, build the wheels but only upload them on tags
-  - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'main'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+  - ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
     - stage: Release
       dependsOn: SecondPhaseTests
       jobs:
