Fix up figure tests as well

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,9 +34,9 @@ python_requires = >=3.7
 setup_requires =
   setuptools_scm
 install_requires =
-  astropy>=4.1
+  astropy>=4.2
   gwcs>=0.15
-  numpy>1.17.0
+  numpy>1.17
 
 [options.extras_require]
 tests =
@@ -51,8 +51,8 @@ docs =
     sphinx-changelog>=1.1.0
     sunpy-sphinx-theme
 plotting =
-    matplotlib>=3
-    mpl_animators
+    matplotlib>=3.2
+    mpl_animators>=1.0
 reproject =
     reproject>=0.7.1
 
