--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{37,38,39}{,-devdeps,-online,-figure,-conda}
+    py{37,38,39}{,-devdeps,-online,-figure,-conda,-oldestdeps}
     build_docs
     codestyle
 requires =
@@ -55,9 +55,18 @@ deps =
     online: pytest-rerunfailures
     online: pytest-timeout
 
+    # Oldest Dependacies
+    oldestdeps: sunpy<3.1
+    oldestdeps: astropy<4.3
+    oldestdeps: gwcs<0.16
+    oldestdeps: numpy<1.18
+    oldestdeps: matplotlib<3.3
+    oldestdeps: mpl_animators<1.1
+    oldestdeps: reproject==0.7.1
+
     # Figure tests need a tightly controlled environment
     figure: matplotlib==3.3.2
-    figure-!devdeps: astropy==4.1.0
+    figure-!devdeps: astropy==4.2.0
     figure-!devdeps: mpl_animators==1.0.0
 
 # The following indicates which extras_require from setup.cfg will be installed
