--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,6 +72,7 @@ stages:
           - linux: py38-conda
             libraries: {}
           - linux: py38-devdeps
+          - linux: py37-oldestdeps
 
   # On branches which aren't main, and not Pull Requests, build the wheels but only upload them on tags
   - ${{ if ne(variables['Build.Reason'], 'PullRequest') }}:
