--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ deps =
     online: pytest-rerunfailures
     online: pytest-timeout
 
-    # Oldest Dependacies
+    # Oldest Dependancies
     oldestdeps: sunpy<3.1
     oldestdeps: astropy<4.3
     oldestdeps: gwcs<0.16
