More warning filtering

--- a/setup.cfg
+++ b/setup.cfg
@@ -94,6 +94,8 @@ filterwarnings =
     # TODO: This ones NEED to be fixed in future
     # Ignore this, oh we emit so many
     ignore::UserWarning
+    # WCSAxes is raising this
+    ignore:FLIP_TOP_BOTTOM is deprecated
 
 [flake8]
 exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
