--- a/setup.cfg
+++ b/setup.cfg
@@ -127,9 +127,11 @@ omit =
   ndcube/*/tests/*
   ndcube/version*
   ndcube/__init__*
+  ndcube/tests/*
   */ndcube/conftest.py
   */ndcube/*setup*
   */ndcube/*/tests/*
+  */ndcube/tests/*
   */ndcube/version*
   */ndcube/__init__*
 
