--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ docs =
     sphinx-automodapi
     sphinx-changelog>=1.1.0
     sunpy-sphinx-theme
+    matplotlib
 plotting =
     matplotlib>=3.2
     mpl_animators>=1.0
